package org.example.Tomorroio.model.factory;

import org.jfree.data.xy.XYSeriesCollection;

public interface DatasetFactory {
    XYSeriesCollection createDataset();
}
